--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-toastify": "^10.0.5"
+    "react-hook-form": "^7.52.0",
+    "react-query": "^3.39.3",
+    "react-toastify": "^10.0.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
